--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+main{
+	widht:150px;
+	height:150px;
+	background:black;
+	
+}
+
+p{
+	color:white;
+	margin-left:32px;
+	padding:10px;
+	
+}
