--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 
 /* Your CSS Code here. */
-main{
+.accio{
 	widht:150px;
 	height:150px;
 	background-color:black;
 	
 }
 
-p{
+.hello-accio{
 	color:white;
 	margin-left:32px;
 	padding:10px;
